$Id: CHANGES.txt,v 1.107 2006/03/27 05:38:40 mclark Exp $

json-rpc-java/svn/trunk

* Add ExceptionTransformer interface and interface to
  JSONRPCBridge to transform exception objects returned
  to the client.
  -- Rhys Yarranton, rhys dot yarranton at albertasolutions dot com

* Make Hello test page use async callback.
* Modify unit test page to allow running a single test by
  clicking on a link.
* Add HttpServletResponseLocalArgResolver and pass
  HttpServletResponse object into calls so that exported
  methods can get access to it.
* Add RawJSONObjectSerializer and RawJSONArraySerializer to allow
  methods to return hand constructed JSON object representations
* Formatting cleanups in example Dictionary client
  -- Michael Clark <michael@metaparadigm.com>

json-rpc-java-cvs

* Add a new overloaded registerObject call that allows the
  caller to specify the class/interface to be used for exporting
  methods on the object (exported methods are restricted to
  just the interface class).
  -- Ian Sollars, ian at sollars dot gmail dot com
* Add back ObjectInstance wrapper class to allow us to store
  the interface to be used to export for the associated object.
  -- Michael Clark <michael@metaparadigm.com>

* License changed from LGPL to Apache License, Version 2.0 after
  approval from all authors/contributors
* Update JSP pages to use common header and footer and new style
* Remove eval function from test.jsp
* Simplify async callback in unit test
  -- Michael Clark <michael@metaparadigm.com>

* Allow derived versions of JSONRPCServlet to override a
  findBridge method to provide a custom method of locating
  the JSONRPCBridge object.
  -- Todd Lindner, tlindner at dynax dot com

* Add java.math.BigDecimal marshalling/unmarshalling support
  to NumberSerializer.
  -- Michael Clark <michael@metaparadigm.com>

* Fix JavaScript client failure the HTTP authentication in Firefox
  -- Mark F Murphy, markm at tyrell dot com
